@@ -13,6 +13,8 @@ update-manager (1:0.96.5) jaunty; urgency=low
   * UpdateManager/Core/DistUpgradeFetcherCore.py:
     - ensure correct error message if downloading failed
       (LP: #113658)
+    - when fetching from mirrors, add fallback if the mirror
+      is too loaded to cope
   * DistUpgrade/DistUpgradeMain.py, dist-upgrade.py:
     - re-factor and make code more modular
     - do not overwrite existing log files on upgrade
